--- a/The_Friends/membership.html
+++ b/The_Friends/membership.html
@@ -186,29 +186,29 @@ function MM_swapImage() { //v3.0
 		</table>
 		</h4>
 
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="4HAENAS94ZK7Y">
+<input type="hidden" name="hosted_button_id" value="WTL27DVB7UZQ2">
 <table>
 <tr><td><input type="hidden" name="on0" value="Select the level of your membership">Select the level of your membership</td></tr><tr><td><select name="os0">
-	<option value="Individual">Individual : $25.00 USD - yearly</option>
-	<option value="Family">Family : $40.00 USD - yearly</option>
-	<option value="Senior/Student">Senior/Student : $15.00 USD - yearly</option>
-	<option value="Sponsor">Sponsor : $75.00 USD - yearly</option>
-	<option value="Patron">Patron : $125.00 USD - yearly</option>
-	<option value="Silver">Silver : $250.00 USD - yearly</option>
-	<option value="Gold">Gold : $500.00 USD - yearly</option>
-	<option value="Diamond">Diamond : $1,000.00 USD - yearly</option>
-	<option value="Corporate Benefactor">Corporate Benefactor : $2,500.00 USD - yearly</option>
-	<option value="Volunteer">Volunteer : $25.00 USD - yearly</option>
+	<option value="Individual">Individual $25.00 USD</option>
+	<option value="Family">Family $40.00 USD</option>
+	<option value="Sponsor">Sponsor $75.00 USD</option>
+	<option value="Patron">Patron $125.00 USD</option>
+	<option value="Silver">Silver $250.00 USD</option>
+	<option value="Gold">Gold $500.00 USD</option>
+	<option value="Diamond">Diamond $1,000.00 USD</option>
+	<option value="Corporate Benefactor">Corporate Benefactor $2,500.00 USD</option>
+	<option value="Volunteer">Volunteer $25.00 USD</option>
 </select> </td></tr>
 <tr><td><input type="hidden" name="on1" value="Phone Number">Phone Number</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
-<tr><td><input type="hidden" name="on1" value="Email Address">Email Address</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+<tr><td><input type="hidden" name="on2" value="Email Address">Email Address</td></tr><tr><td><input type="text" name="os2" maxlength="200"></td></tr>
 </table>
 <input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 </p>
 					</TD>
 
