--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -68,7 +68,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                   <td width="50">&nbsp;</td>
                   <td width="896">
                     <div class="TTL" align="center">
-                      <p style="margin-top: 0"><b>20th Annual Hart of
+                      <p style="margin-top: 0"><b>21<sup>st</sup> Annual Hart of
                             the West Pow Wow</b></p>
                     </div>
                   </td>
@@ -172,8 +172,8 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                               5px" align="center"> <h2 align="center"> 
 William S. Hart County Park &amp; Museum<br>
 along with The Friends of Hart Park<br>
-sincerely THANK those who particpated in the<br></h2></p>
-                            <h2 align="center"> <u>20th</u> Annual Hart of the West</h2>
+are proud to present the<br></h2></p>
+                            <h2 align="center"> 21<sup>st</sup> Annual Hart of the West</h2>
                             <p align="center"> </p>
                             <p align="center"> </p>
                             <p align="center"> <img
@@ -183,11 +183,15 @@ sincerely THANK those who particpated in the<br></h2></p>
                             <h2 align="center"> and Native American
                               Craft Fair </h1>
 <p><h2 align="center">
-September 28<sup>th</sup> &amp; 29<sup>th</sup>
+September 27<sup>th</sup> &mdash; 10am to 7pm <br>
+September 28<sup>th</sup> &mdash; 10am to 5:30pm
 </h2><p>
-
+<h3 align="center">
+                                          <p>Princess Contest &mdash; ages 15 to 19</p>
+                                          <p>All Drums &amp; Dancers Welcome!</p>
+</h3>
                             <h2 id="PowWowNote" align="center"><b>
-                                    2014 Vendors, please contact Nadiya 
+                                    Vendors, please contact Nadiya 
                                     at the phone number shown below.</b><br>
 							</h2>
                         </tr>
@@ -238,7 +242,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                                 Headman
                                           </td>
                                           <td id="PowWowPerson">
-                                                Shiigo Yellowhorse/Din&eacute;
+                                                TBA
                                           </td>
                                         </tr>
                                         <tr>
@@ -246,7 +250,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                                 Headwoman
                                           </td>
                                           <td id="PowWowPerson">
-                                                Samantha Moreno/Lakota
+                                                TBA
                                           </td>
                                         </tr>
                                         <tr>
@@ -255,7 +259,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                               </p>
                                           </td>
                                           <td id="PowWowPerson">
-                                                Michael Jimenez/Apache/Huichol
+                                                TBA
 										  </td>
                                         </tr>
                                         <tr>
@@ -263,7 +267,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                                 Headgirl
                                           </td>
                                           <td id="PowWowPerson">
-                                                Nina Moreno/Lakota/Apache
+                                                TBA
                                           </td>
                                         </tr>
                                         <tr>
@@ -287,7 +291,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                                 Southern Host Drum
                                           </td>
                                           <td id="PowWowPerson">
-                                                Big Medicine
+                                                TBA
                                           </td>
                                         </tr>
                                       </tbody>
@@ -319,7 +323,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                     <p style="margin-bottom: 1px"> <b
                                         class="EVNTC">When?</b></p>
                                     <p style="margin-top: 0"><b> <font
-                                          color="#800000" size="5">2013
+                                          color="#800000" size="5">2014
                                           Schedule</font></b></p>
                                     <ul>
                                       <li><font color="#006600"><font
@@ -332,7 +336,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                           <p style="margin-top: 0;
                                             margin-bottom: 0"><font
                                               color="#006600" size="3">
-                                              Sunday, <br>10am&mdash;6pm</font></p>
+                                              Sunday, <br>10am&mdash;5:30pm</font></p>
                                         </li>
                                       </b>
                                     </ul>
@@ -357,14 +361,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                           <p style="margin-top: 0;
                                             margin-bottom: 0"> <font
                                                 color="#006600" size="3">
-                                                Princess Contest - ages 16 to 21
-                                                </font></p>
-                                        </li>
-                                        <li>
-                                          <p style="margin-top: 0;
-                                            margin-bottom: 0"> <font
-                                                color="#006600" size="3">
-                                                All Drums &amp; Dancers Welcome!
+                                                Dogs must be leashed and kept away from the Arena
                                                 </font></p>
                                         </li>
                                       </ul>
@@ -378,7 +375,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                         is with great pleasure that we
                                         invite you to experience a
                                         significant slice of Native
-                                        American culture at the 20th
+                                        American culture at the 21<sup>st</sup>
                                         Annual Hart of the West Powwow.
                                         We hope you will come and enjoy
                                         the dancers, drummers and the
@@ -410,11 +407,15 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
                                       262px; height: 275px" align="left">
                                       <dl>
                                         <b> 
-                                          <dt>Marylina &mdash; founder</dt>
-                                          <dd>(661) 255-9295</dd>
-										  <dt>Nadiya Littlewarrior&mdash; information</dt>
-                                          <dd>(661) 298-3014
-                                            kiwenkikwe@yahoo.com</dd>
+                                          <dt>Founders:
+                                            </dt>
+                                            <dd>
+                                            Lina Schultz<br>
+                                            Bill Kimmey
+                                            </dd>
+										  <dt>Vendor info</dt>
+                                          <dd>Nadiya Littlewarrior<br>
+                                              (661) 298-3014</dd>
                                         </b>
                                       </dl>
                                       <br>
