--- a/index.htm
+++ b/index.htm
@@ -193,6 +193,28 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   </td>
                                 </tr>
                                 <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
+                                <td>
+                                <h3>Click below for highlights of the</h3>
+                                <h2 align="center">2014 Cowboy Festival Hart Park Events!</h2>
+<a href="Event_Pages/cowboyfest2014/LorenJanes.jpg" rel="lightbox[cowboyfest]" 
+title="Stuntman Loren Janes makes a surprise appearance at the Walk of Western Stars tour!">
+<img src="Event_Pages/cowboyfest2014/thumbs/LorenJanes.jpg"/></a>
+<a href="Event_Pages/cowboyfest2014/MaltinAndRogers-Barnett.jpg" rel="lightbox[cowboyfest]" 
+title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl Rogers-Barnett">
+<img src="Event_Pages/cowboyfest2014/thumbs/MaltinAndRogers-Barnett.jpg"/></a>
+<a href="Event_Pages/cowboyfest2014/ChandlerAndGail.jpg" rel="lightbox[cowboyfest]" 
+title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl Rogers-Barnett">
+<img src="Event_Pages/cowboyfest2014/thumbs/ChandlerAndGail.jpg"/></a>
+                                </td>
+                                </tr>
                                 <tr>
                                   <td style="vertical-align: top;">
                                         <font color="#FFCC00" size="6">
@@ -276,17 +298,22 @@ title="National Peace Officers Memorial Day">
 </a>
 , Thursday, <b>May 15<sup>th</sup> at 7pm</b>. Open <b>free</b> to the 
 public, this special evening takes place <b>at Hart Hall</b> on the grounds of the William S. Hart County Park. 
-<p class="lots">The program includes short talks by distinguished authors J.R.Sanders, Sven Crongeyer, Tom Hays and Art 
+<p class="lots">Joe Herrington, nationally known cowboy poet, will be the evening's emcee. 
+The program will include distinguished speakers including Friends of Hart Park Board President, 
+Laurene Weste and authors J.R. Sanders, Sven Crongeyer, Tom Hays and Art 
 Sjoquist, who will speak on the subjects of Old West lawmen, and the histories of the early Los Angeles 
 Sheriff's Department and the Los Angeles Police Department. Bud Bradshaw, author of Brandishing, will speak 
 on the legacy of the "Newhall Incident" and pay tribute to officers James "Skip" Pence, Roger Gore, Walt 
 Frago and George "Mike" Alleyn. A Special tribute to Deputy Sheriff Arthur E. Pelino, concludes the live 
-presentation part of the evening. Audience and presenters are invited to enjoy a time of Fellowship immediately 
+presentation part of the evening. </p>
+<p class="lots">Audience and presenters are invited to enjoy a time of Fellowship immediately 
 following the program. Live music throughout the evening is provided by John Bergstrom, Gency Brown, and 
 Jason "Buck" Corbett, members of the Western Music Association California Chapter.</p>
 <p class="lots">This event is FREE to the public and is made possible through the generous contributions of Friends of Hart
-Park, Western Music Association, and OutWest Boutique and Cultural Center. <i>Special thanks to Rachel Barnes,
-Norm Phillips, J.R. Sanders, Roger Palmer, and Gordon Graham.</i></p>
+Park, Western Music Association, and OutWest Boutique and Cultural Center. 
+<i>
+Special thanks to Rachel Barnes, Norm Phillips, J.R. Sanders, Roger Palmer, Gordon Graham, and Boy Scout Troop 228.
+</i></p>
 <p class="lots"><b>For further event information, please contact the William S. Hart Museum office at (661) 254-4584 or Bobbi 
 Jean Bell, OutWest, (661) 255-7087.</b></p>
 </h4>
