--- a/index.html
+++ b/index.html
@@ -264,15 +264,6 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Saturday, Aug. 29<sup>th</sup></td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/DateNight2015.jpg" rel="lightbox[date]"
-                                        title="Enjoy an evening on the town, while your kids have fun with us!">
-                                      Date Night
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Saturday &amp; Sunday, Sep. 26<sup>th</sup> &amp; 27<sup>th</sup></td>
                                       <td id="Event">
                                       <a href="Event_Pages/powwow.html">
@@ -283,7 +274,18 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                     <tr>
                                       <td id="EventDate">Sunday, Oct. 11<sup>th</sup></td>
                                       <td id="Event">
+                                      <a href="Event_Pages/bowwows2015.jpg" rel="lightbox[bowwow]"
+                                        title="Bow Wows &amp; Meows Pet Fair">
                                       Bow Wows &amp; Meows Pet Fair
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, October, Aug. 24<sup>th</sup></td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/Hart-o-Ween-2015.jpg" rel="lightbox[hartoween]"
+                                        title="Hart-o-Ween free Halloween movie and talk">
+                                      &ldquo;Hart-o-Ween&rdquo; free Halloween movie and talk
+                                      </a>
                                       </td>
                                     </tr>
                                     <tr>
@@ -310,40 +312,28 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                       Cowboys &amp; Carols
                                       </td>
                                     </tr>
-                                    <tr>
-                                      <td id="EventDate"></td>
-                                      <td id="Event">
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                      Jul. 31, Aug. 14, Aug. 28 at 7pm
-                                      </td>
-                                      <td id="Event">
-                                      Free Movie in the Park!<small>
-                                      For movie titles &amp; details, call (661) 259-0855</small>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">
-                                      Sep. 19, Dec. 12
-                                      </td>
-                                      <td id="Event">
-                                      Kid's Day at the Ranch!<small>
-                                      For location &amp; details, call (661) 254-4584</small>
-                                      </td>
-                                    </tr>
                                   </tbody>
                                 </table>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
                                     <p align="center">
-                                      <a href="Event_Pages/DateNight2015.jpg" rel="lightbox[date1]"
-                                        title="Enjoy an evening on the town, while your kids have fun with us!">
-                                        <h3>Enjoy an evening on the town, while your kids have fun with us!</h3>
-                                        <img src="Event_Pages/DateNight2015-sm.jpg" />
-                                    </a>
+                                      <a href="Event_Pages/powwow.html">
+                                        <h4>Come to our 22nd Annual Hart of the West</h4>
+                                        <h2>Pow Wow</h2>
+                                        <img src="Event_Pages/powwow.png" />
+                                        <h3>and Native American Craft Fair</h3>
+                                        </a>
+                                    </p>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+                                    <p align="center">
+                                      <a href="Event_Pages/Hart-o-Ween-2015.jpg" rel="lightbox[hartoween2]"
+                                        title="Enjoy a locally filmed movie, perfect for Halloween!">
+                                        <h3>Enjoy a locally filmed FREE movie, perfect for Halloween!</h3>
+                                        <img src="Event_Pages/Hart-o-Ween-2015-sm.jpg" />
+                                        </a>
                                     </p>
 <!--
                                     <p style="margin-top: 7px;
